# nasa-mission-timer-demo

./: .gitignore  README.md  codecov.yaml  pyproject.toml
.github/workflows/: test.yml
docs/: npr_7150_2d_compliance_matrix.md  software_design_description.md  software_development_plan.md  software_requirements_specification.md  verification_validation_plan.md
missiontimer/: countdown_timer.py
src/: main.py
tests/: test_timer.py
