[project]
name = "nasa-mission-timer-demo"
version = "0.1.0"
description = "A demo countdown timer project based on NASA NPR 7150.2D software practices."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["missiontimer"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
